--- a/ODK.Web.Razor/Views/Shared/Notifications/_NotificationListItem.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Notifications/_NotificationListItem.cshtml
@@ -13,6 +13,7 @@
         NotificationType.ChapterContactMessage => "New contact message",
         NotificationType.ConversationOwnerMessage => "New conversation message",
         NotificationType.ConversationAdminMessage => "New conversation message",
+        NotificationType.EventWaitlistPromotion => "Event waiting list update",
         NotificationType.NewEvent => "New event",
         NotificationType.NewMember => "New member",
         _ => null
