--- a/ODK.Web.Razor/Views/Shared/Events/_EventTicketPurchase.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventTicketPurchase.cshtml
@@ -48,7 +48,7 @@
                 </div>
 
                 <a class="btn btn-primary"
-                   href="@OdkRoutes.Groups.EventCheckout(Model.Platform, Model.Chapter, Model.Event.Id)">
+                   href="@OdkRoutes.Groups.EventCheckout(Model.Platform, Model.Chapter, Model.Event.Shortcode)">
                     Complete purchase
                 </a>
             }
@@ -82,7 +82,7 @@
                     </div>
 
                     <a class="btn btn-primary"
-                       href="@OdkRoutes.Groups.EventCheckout(Model.Platform, Model.Chapter, Model.Event.Id)">
+                       href="@OdkRoutes.Groups.EventCheckout(Model.Platform, Model.Chapter, Model.Event.Shortcode)">
                         Pay deposit
                     </a>
                 }                
@@ -106,7 +106,7 @@
                     </div>
 
                     <a class="btn btn-primary"
-                       href="@OdkRoutes.Groups.EventCheckout(Model.Platform, Model.Chapter, Model.Event.Id)">
+                       href="@OdkRoutes.Groups.EventCheckout(Model.Platform, Model.Chapter, Model.Event.Shortcode)">
                         Buy ticket
                     </a>                  
                 }
