--- a/ODK.Web.Razor/Views/Shared/Events/_ListEventTitle.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_ListEventTitle.cshtml
@@ -13,7 +13,7 @@
             CurrentResponse = Model.Event.Response
         })
 
-        <a href="@OdkRoutes.Groups.Event(Model.Platform, Model.Chapter, Model.Event.EventId)" 
+        <a href="@OdkRoutes.Groups.Event(Model.Platform, Model.Chapter, Model.Event.EventShortcode)" 
            class="@(Model.Event.Response != EventResponseType.None ? "ms-1" : null)">
             @Model.Event.EventName
         </a>
