--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberContent.cshtml
@@ -16,8 +16,7 @@
         Name = Model.AdminMember.Member.FullName,
         ReceiveContactEmails = Model.AdminMember.ReceiveContactEmails,
         ReceiveEventCommentEmails = Model.AdminMember.ReceiveEventCommentEmails,
-        ReceiveNewMemberEmails = Model.AdminMember.ReceiveNewMemberEmails,
-        SendNewMemberEmails = Model.AdminMember.SendNewMemberEmails
+        ReceiveNewMemberEmails = Model.AdminMember.ReceiveNewMemberEmails
     })
     <button class="btn btn-primary">Update</button>
 </form>
