--- a/ODK.Web.Razor/Views/Shared/Admin/_AdminSideMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/_AdminSideMenu.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ODK.Core.Chapters
 @using ODK.Core.Platforms
 @using ODK.Services.Authentication
+@using ODK.Services.Security
 @using ODK.Web.Common.Components
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Admin
@@ -9,60 +10,67 @@
 @inject IRequestStore RequestStore
 @{
     var chapter = await RequestStore.GetChapter();
+    var currentMember = await RequestStore.GetCurrentMember();
+    var chapterAdminMember = await RequestStore.GetCurrentChapterAdminMember();
     var currentMemberId = RequestStore.CurrentMemberId;
     var platform = RequestStore.Platform;
 
-    var groupLinks = new[]
-    {
-        new MenuItem { Link = OdkRoutes.MemberGroups.GroupConversations(platform, chapter), Text = "Conversations" },
-        platform == PlatformType.DrunkenKnitwits
-            ? new MenuItem { Link = $"/{chapter.ShortName}/admin/chapter/emails", Text = "Emails" }
-            : new MenuItem(),
-        new MenuItem { Link = OdkRoutes.MemberGroups.GroupQuestions(platform, chapter), Text = "FAQ" },
-        platform == PlatformType.DrunkenKnitwits
-            ? new MenuItem()
-            : new MenuItem { Link = OdkRoutes.MemberGroups.GroupLocation(platform, chapter), Text = "Location" },
-        new MenuItem { Link = OdkRoutes.MemberGroups.GroupMessages(platform, chapter), Text = "Messages" },
-        platform == PlatformType.DrunkenKnitwits
-            ? new MenuItem()
-            : new MenuItem { Link = OdkRoutes.MemberGroups.GroupImage(platform, chapter), Text = "Picture" },
-        new MenuItem { Link = OdkRoutes.MemberGroups.GroupPages(platform, chapter), Text = "Pages" },
-        new MenuItem { Link = OdkRoutes.MemberGroups.GroupPrivacy(platform, chapter), Text = "Privacy" },
-        new MenuItem { Link = OdkRoutes.MemberGroups.GroupSocialMedia(platform, chapter), Text = "Social media" },
-        platform == PlatformType.DrunkenKnitwits
-            ? new MenuItem { Link = OdkRoutes.MemberGroups.GroupSubscription(platform, chapter), Text = "Subscription" }
-            : chapter.OwnerId == currentMemberId
-                ? new MenuItem { Link = OdkRoutes.Account.Subscription(platform, null), Text = "Subscription" }
-                : new MenuItem(),
-        new MenuItem { Link = OdkRoutes.MemberGroups.GroupTexts(platform, chapter), Text = "Texts" },
-        platform == PlatformType.DrunkenKnitwits
-            ? new MenuItem()
-            : new MenuItem { Link = OdkRoutes.MemberGroups.GroupTheme(platform, chapter), Text = "Theme" },
-        platform == PlatformType.DrunkenKnitwits
-            ? new MenuItem()
-            : new MenuItem { Link = OdkRoutes.MemberGroups.GroupTopics(platform, chapter), Text = "Topics" },
-        platform == PlatformType.DrunkenKnitwits
-            ? new MenuItem()
-            : new MenuItem { Link = OdkRoutes.MemberGroups.GroupDelete(platform, chapter), Text = "Delete" },
-    };
+    var groupLinks = new ChapterAdminMenuItemGroup(chapterAdminMember, platform)
+        .Add(ChapterAdminSecurable.Conversations, 
+            new MenuItem { Link = OdkRoutes.MemberGroups.GroupConversations(platform, chapter), Text = "Conversations" })
+        .Add(ChapterAdminSecurable.Emails,
+            new MenuItem { Link = $"/{chapter.ShortName}/admin/chapter/emails", Text = "Emails" },
+            PlatformType.DrunkenKnitwits)
+        .Add(ChapterAdminSecurable.Questions,
+            new MenuItem { Link = OdkRoutes.MemberGroups.GroupQuestions(platform, chapter), Text = "FAQ" })
+        .Add(ChapterAdminSecurable.Location,
+            new MenuItem { Link = OdkRoutes.MemberGroups.GroupLocation(platform, chapter), Text = "Location" },
+            PlatformType.Default)
+        .Add(ChapterAdminSecurable.ContactMessages,
+            new MenuItem { Link = OdkRoutes.MemberGroups.GroupMessages(platform, chapter), Text = "Messages" })
+        .Add(ChapterAdminSecurable.Branding,
+            new MenuItem { Link = OdkRoutes.MemberGroups.GroupImage(platform, chapter), Text = "Picture" },
+            PlatformType.Default)
+        .Add(ChapterAdminSecurable.Pages,
+            new MenuItem { Link = OdkRoutes.MemberGroups.GroupPages(platform, chapter), Text = "Pages" })
+        .Add(ChapterAdminSecurable.PrivacySettings,
+            new MenuItem { Link = OdkRoutes.MemberGroups.GroupPrivacy(platform, chapter), Text = "Privacy" })
+        .Add(ChapterAdminSecurable.SocialMedia,
+            new MenuItem { Link = OdkRoutes.MemberGroups.GroupSocialMedia(platform, chapter), Text = "Social media" })
+        .Add(ChapterAdminSecurable.SiteSubscription,
+            new MenuItem { Link = OdkRoutes.MemberGroups.GroupSubscription(platform, chapter), Text = "Subscription" },
+            PlatformType.DrunkenKnitwits)
+        .Add(ChapterAdminSecurable.SiteSubscription,
+            new MenuItem { Link = OdkRoutes.Account.Subscription(platform, null), Text = "Subscription" },
+            PlatformType.Default)
+        .Add(ChapterAdminSecurable.Texts,
+            new MenuItem { Link = OdkRoutes.MemberGroups.GroupTexts(platform, chapter), Text = "Texts" })
+        .Add(ChapterAdminSecurable.Branding,
+            new MenuItem { Link = OdkRoutes.MemberGroups.GroupTheme(platform, chapter), Text = "Theme" },
+            PlatformType.Default)
+        .Add(ChapterAdminSecurable.Topics,
+            new MenuItem { Link = OdkRoutes.MemberGroups.GroupTopics(platform, chapter), Text = "Topics" },
+            PlatformType.Default)
+        .Add(ChapterAdminSecurable.Publish,
+            new MenuItem { Link = OdkRoutes.MemberGroups.GroupDelete(platform, chapter), Text = "Delete" },
+            PlatformType.Default);
 
-    var membersLinks = new[]
-    {
-        new MenuItem { Link = OdkRoutes.MemberGroups.MemberAdmins(platform, chapter), Text = "Admins" },
-        new MenuItem { Link = OdkRoutes.MemberGroups.MembershipSettings(platform, chapter), Text = "Membership" },
-        new MenuItem { Link = OdkRoutes.MemberGroups.MemberProperties(platform, chapter), Text = "Profile questions" },
-        new MenuItem
-        {
-            Link = OdkRoutes.MemberGroups.MembersSubscriptions(platform, chapter),
-            Text = "Subscriptions"
-        },
-        new MenuItem { Link = OdkRoutes.MemberGroups.MembersEmail(platform, chapter), Text = "Bulk email" },
-        platform == PlatformType.DrunkenKnitwits
-            ? new MenuItem()
-            : new MenuItem { Link = OdkRoutes.MemberGroups.MemberApprovals(platform, chapter), Text = "Approvals" }
-    };
+    var membersLinks = new ChapterAdminMenuItemGroup(chapterAdminMember, platform)
+        .Add(ChapterAdminSecurable.AdminMembers,
+            new MenuItem { Link = OdkRoutes.MemberGroups.MemberAdmins(platform, chapter), Text = "Admins" })
+        .Add(ChapterAdminSecurable.MembershipSettings,
+            new MenuItem { Link = OdkRoutes.MemberGroups.MembershipSettings(platform, chapter), Text = "Membership" })
+        .Add(ChapterAdminSecurable.Properties,
+            new MenuItem { Link = OdkRoutes.MemberGroups.MemberProperties(platform, chapter), Text = "Profile questions" })
+        .Add(ChapterAdminSecurable.Subscriptions,
+            new MenuItem { Link = OdkRoutes.MemberGroups.MembersSubscriptions(platform, chapter), Text = "Subscriptions" })
+        .Add(ChapterAdminSecurable.BulkEmail,
+            new MenuItem { Link = OdkRoutes.MemberGroups.MembersEmail(platform, chapter), Text = "Bulk email" })
+        .Add(ChapterAdminSecurable.MemberApprovals,
+            new MenuItem { Link = OdkRoutes.MemberGroups.MemberApprovals(platform, chapter), Text = "Approvals" },
+            PlatformType.Default);
 
-    var siteAdminLinks = platform == PlatformType.DrunkenKnitwits && User.IsInRole(OdkRoles.SiteAdmin)
+    var siteAdminLinks = platform == PlatformType.DrunkenKnitwits && currentMember.SiteAdmin
         ? new[]
         {
             new MenuItem { Link = $"/{chapter.ShortName}/admin/siteadmin/members", Text = "Members" },
@@ -81,21 +89,17 @@
         {
             Link = OdkRoutes.MemberGroups.Group(platform, chapter),
             Text = "Group",
-            Children = groupLinks.Where(x => !string.IsNullOrEmpty(x.Text)).ToArray()
+            Children = groupLinks
         },
         new MenuItem
         {
             Link = OdkRoutes.MemberGroups.Events(platform, chapter),
             Text = "Events",
-            Children = new[]
-            {
-                new MenuItem
-                {
-                    Link = OdkRoutes.MemberGroups.Venues(platform, chapter),
-                    Text = "Venues"
-                },
-                new MenuItem { Link = OdkRoutes.MemberGroups.EventSettings(platform, chapter), Text = "Settings" }
-            }
+            Children = new ChapterAdminMenuItemGroup(chapterAdminMember, platform)
+                .Add(ChapterAdminSecurable.Venues,
+                    new MenuItem { Link = OdkRoutes.MemberGroups.Venues(platform, chapter), Text = "Venues" })
+                .Add(ChapterAdminSecurable.EventSettings,
+                    new MenuItem { Link = OdkRoutes.MemberGroups.EventSettings(platform, chapter), Text = "Settings" }),
         },
         new MenuItem
         {
