--- a/ODK.Web.Razor/Views/Shared/Account/_AccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_AccountMenu.cshtml
@@ -16,7 +16,7 @@
     {
         new MenuItem 
         { 
-            Link = OdkRoutes.Account.PersonalDetails(), 
+            Link = OdkRoutes.Account.PersonalDetails(chapter),
             Text = "Personal details", 
             Children = new[]
             {
