--- a/ODK.Web.Razor/Views/Shared/Account/_AccountPersonalDetailsMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_AccountPersonalDetailsMenu.cshtml
@@ -5,7 +5,7 @@
 @{
     var menuItems = new[]
     {
-        new MenuItem { Link = OdkRoutes.Account.PersonalDetails(), Text = "Personal details", },
+        new MenuItem { Link = OdkRoutes.Account.PersonalDetails(null), Text = "Personal details", },
         new MenuItem { Link = OdkRoutes.Account.Picture(null), Text = "Picture" },
         new MenuItem { Link = OdkRoutes.Account.EmailPreferences(null), Text = "Emails" }
     };
