--- a/ODK.Web.Razor/Views/Shared/Account/_PaymentsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_PaymentsContent.cshtml
@@ -5,6 +5,12 @@
 @model MemberPaymentsPageViewModel
 @inject IOdkRoutes OdkRoutes
 
+@if (Model.Payments.Count == 0)
+{
+    <p>You haven't made any payments yet</p>
+    return;
+}
+
 <div class="table-responsive">
     <table class="table table-striped">
         <thead>
