--- a/ODK.Web.Razor/Views/Shared/Account/_ConversationsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ConversationsContent.cshtml
@@ -2,16 +2,28 @@
 @using ODK.Core.Utils
 @using ODK.Services.Members.ViewModels
 @using ODK.Web.Common.Routes
+@using ODK.Web.Common.Services
 @model MemberConversationsPageViewModel
 @inject IOdkRoutes OdkRoutes
+@inject IRequestStore RequestStore
 @{
+    var currentChapter = RequestStore.ChapterOrDefault;
+
     var chapterDictionary = Model.Chapters
         .ToDictionary(x => x.Id);
 }
 
 @if (Model.Conversations.Count == 0)
 {
+    var contactUrl = currentChapter != null
+        ? OdkRoutes.Groups.Contact(currentChapter)
+        : OdkRoutes.Site.Contact;
+
     <p>You haven't started any conversations yet</p>
+
+    <p>
+        <a href="@contactUrl">Get in touch</a>
+    </p>
     return;
 }
 
